# cstar-cli

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  syntetic_card.json
.github/: PULL_REQUEST_TEMPLATE.md
deposited-remotely/: AGGADE.77777.20221130.172012.001.01000
integration_check/: README.md  certificate_configuration_template.cnf  install_Python3.9_and_Poetry.sh
integration_check/postman/: Check integration with CSTAR.postman_collection.json
integration_check/scripts/001-mAuth-check/: script.sh
integration_check/scripts/001-mAuth-check-UAT/: script.sh
integration_check/scripts/002-API-key-check/: script.sh
integration_check/scripts/002-API-key-check-UAT/: script.sh
integration_check/scripts/003-expected-file-check-UAT/: script.sh
integration_check/scripts/004-remote-file-check-UAT/: script.sh
integration_check/scripts/005-generated-file-check/: script.sh
integration_check/scripts/005-mAuth-check-PROD/: script.sh
integration_check/scripts/005a-extract-ade-ack-UAT/: script.sh
integration_check/scripts/005b-ade-ack-remote-check-UAT/: script.sh
integration_check/scripts/006-API-key-check-PROD/: script.sh
integration_check/scripts/006-mAuth-check-PROD/: script.sh
integration_check/scripts/007-API-key-check-PROD/: script.sh
src/cstar-cli/: cst  setup.py
src/cstar-cli-core/: setup.py
src/cstar-cli-core/cstar/cli/: __init__.py
src/cstar-cli-core/cstar/cli/core/: parser.py
src/cstar-cli/cstar/cli/: __main__.py  constants.py
src/cstar-cli/cstar/cli/bpd/: __init__.py  awardperiod.py  awardwinner.py  (+4 more)
test/: run-all.sh
(+19 files in other folders)
