[tool.poetry]
name = "cstar-cli"
version = "0.0.8"
description = "Cstar Command Line Interface"
authors = [
	"CSTAR Team <cstar@pagopa.it>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
psycopg2-binary = "^2.9.2"
pandas = "1.5.2"
python-gnupg = "^0.5.0"
faker = "^15.3.4"
requests = "^2.28.2"
[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
