[tool.poetry]
name = "cstar-cli"
version = "0.0.9"
description = "Cstar Command Line Interface"
authors = [
	"CSTAR Team <cstar@pagopa.it>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
psycopg2-binary = "^2.9.2"
pandas = "1.5.3"
faker = "^16.6.0"
requests = "^2.28.2"
pgpy = "^0.6.0"
schwifty = "^2023.2.0"
[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
