[tool.poetry]
name = "cstar-cli"
version = "1.0.1"
description = "Cstar Command Line Interface"
authors = [
	"CSTAR Team <cstar@pagopa.it>"
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4"
psycopg2-binary = "^2.9.2"
pandas = "2.2.1"
faker = "24.4.0"
requests = "^2.31.0"
pgpy = "^0.6.0"
schwifty = "2024.1.1.post0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
[tool.poetry.dev-dependencies]
black = "24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
